--- a/src/CountdownTimer/CountdownTimer.css
+++ b/src/CountdownTimer/CountdownTimer.css
@@ -1,14 +1,12 @@
 .root_container {
-  margin: 20px 0;
-  padding: 20px 0;
+  margin: 20px 0 0 0;
+  padding: 20px 0 0 0;
 }
 
 .timer_container {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-content: center;
-  flex-flow: row wrap;
   margin: auto;
 }
 
