--- a/src/App.css
+++ b/src/App.css
@@ -78,9 +78,9 @@ body {
         flex-direction: column;
     }
     .content_container {
+        margin: 30% auto 0 auto;
         width: 100%;
-        padding: 10px 0;
-        margin: 30px 0;
+        padding: 0;
     }
     .header_container {
       margin: 0;
