--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,55 @@ html {
 body {
   margin: 0;
 }
+h1 {
+margin-top: 0em;
+margin-bottom: 0em;
+padding-top: 0em;
+padding-bottom: 0em;
+letter-spacing: .2em;
+font-size: 1.875em;
+}
+h2 {
+margin-top: 0em;
+margin-bottom: 1.085em;
+padding-top: 0em;
+padding-bottom: 1.085em;
+letter-spacing: .1em;
+font-size: 1.25em;
+}
+p {
+margin-top: 0em;
+margin-bottom: 0.67em;
+padding-top: 0em;
+padding-bottom: 0.67em;
+letter-spacing: .08em;
+}
+
+
+a {
+  color: #27cda5;
+  text-decoration: none;
+}
 
 .root {
+  display: flex;
+  flex-direction: column;
+}
+
+.main_container{
 }
 
 .background {
-  background-image: url("assets/great-haze.png");
+  background: url("assets/great-haze.png");
   background-repeat: no-repeat;
+  top: 0;
+  bottom: 0;
   left: 0;
+  right: 0;
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 0;
-  z-index: -1;
+  z-index: -20;
 }
 
 .content_container {
@@ -30,7 +66,6 @@ body {
   justify-content: flex-start;
   margin: 15% auto 0 auto;
   padding: 30px;
-  vertical-align: middle;
   width: 70%;
 }
 
@@ -69,6 +104,21 @@ body {
   margin: auto;
 }
 
+
+.text_container {
+  top: 100%;
+  position: absolute;
+}
+
+.text_wrapper {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  line-height: 1.75em;
+  margin: auto;
+  width: 80%;
+}
+
 @media screen and (max-width: 610px) {
     .root {
       height: 30%;
@@ -91,6 +141,14 @@ body {
     }
     .header_sm {
       font-size: 25px;
+    }
+    .text_container {
+
+    }
+    .text_wrapper {
+      font-size: 20px;
+      line-height: 1.5em;
+      width: 90%;
     }
 }
 
